update::>> till jq

--- a/templates/about.html
+++ b/templates/about.html
@@ -87,75 +87,30 @@
             <h1 class="display-4">Qualified Healthcare Professionals</h1>
         </div>
         <div class="owl-carousel team-carousel position-relative">
+            {% for i in objects %}
             <div class="team-item">
                 <div class="row g-0 bg-light rounded overflow-hidden">
                     <div class="col-12 col-sm-5 h-100">
-                        <img class="img-fluid h-100" src="/static/img/team-1.jpg" style="object-fit: cover;">
+                        <img class="img-fluid h-100" src="{{i.image.url}}" style="object-fit: cover;">
                     </div>
                     <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                         <div class="mt-auto p-4">
-                            <h3>Doctor Name</h3>
-                            <h6 class="fw-normal fst-italic text-primary mb-4">Cardiology Specialist</h6>
-                            <p class="m-0">Dolor lorem eos dolor duo eirmod sea. Dolor sit magna rebum clita rebum
-                                dolor</p>
+                            <h3>{{i.name}}</h3>
+                            <h6 class="fw-normal fst-italic text-primary mb-4">{{i.expertise}}</h6>
+                            <p class="m-0">{{i.short_intro}}</p>
                         </div>
                         <div class="d-flex mt-auto border-top p-4">
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#!"><i
+                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="{{i.twitter}}"><i
                                     class="fab fa-twitter"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#!"><i
+                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="{{i.facebook}}"><i
                                     class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#!"><i
+                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="{{i.linkedin}}"><i
                                     class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="team-item">
-                <div class="row g-0 bg-light rounded overflow-hidden">
-                    <div class="col-12 col-sm-5 h-100">
-                        <img class="img-fluid h-100" src="/static/img/team-2.jpg" style="object-fit: cover;">
-                    </div>
-                    <div class="col-12 col-sm-7 h-100 d-flex flex-column">
-                        <div class="mt-auto p-4">
-                            <h3>Doctor Name</h3>
-                            <h6 class="fw-normal fst-italic text-primary mb-4">Cardiology Specialist</h6>
-                            <p class="m-0">Dolor lorem eos dolor duo eirmod sea. Dolor sit magna rebum clita rebum
-                                dolor</p>
-                        </div>
-                        <div class="d-flex mt-auto border-top p-4">
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#!"><i
-                                    class="fab fa-twitter"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#!"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#!"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="team-item">
-                <div class="row g-0 bg-light rounded overflow-hidden">
-                    <div class="col-12 col-sm-5 h-100">
-                        <img class="img-fluid h-100" src="/static/img/team-3.jpg" style="object-fit: cover;">
-                    </div>
-                    <div class="col-12 col-sm-7 h-100 d-flex flex-column">
-                        <div class="mt-auto p-4">
-                            <h3>Doctor Name</h3>
-                            <h6 class="fw-normal fst-italic text-primary mb-4">Cardiology Specialist</h6>
-                            <p class="m-0">Dolor lorem eos dolor duo eirmod sea. Dolor sit magna rebum clita rebum
-                                dolor</p>
-                        </div>
-                        <div class="d-flex mt-auto border-top p-4">
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#!"><i
-                                    class="fab fa-twitter"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#!"><i
-                                    class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#!"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
