--- a/templates/service.html
+++ b/templates/service.html
@@ -7,64 +7,37 @@
             <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Services</h5>
             <h1 class="display-4">Excellent Medical Services</h1>
         </div>
-        <div class="row g-5">
-            <div class="col-lg-4 col-md-6">
-                <div
-                    class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
-                        <i class="fa fa-2x fa-user-md text-white"></i>
-                    </div>
-                    <h4 class="mb-3">Emergency Care</h4>
-                    <p class="m-0">Kasd dolor no lorem nonumy sit labore tempor at justo rebum rebum stet, justo
-                        elitr dolor amet sit</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="#!">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
-                </div>
+        <div class="row g-5" id="services-container">
+
+
+            <div class="spinner-grow text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div
-                    class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
-                        <i class="fa fa-2x fa-procedures text-white"></i>
-                    </div>
-                    <h4 class="mb-3">Operation & Surgery</h4>
-                    <p class="m-0">Kasd dolor no lorem nonumy sit labore tempor at justo rebum rebum stet, justo
-                        elitr dolor amet sit</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="#!">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
-                </div>
+            <div class="spinner-grow text-secondary" role="status">
+                <span class="visually-hidden">Loading...</span>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div
-                    class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
-                        <i class="fa fa-2x fa-stethoscope text-white"></i>
-                    </div>
-                    <h4 class="mb-3">Outdoor Checkup</h4>
-                    <p class="m-0">Kasd dolor no lorem nonumy sit labore tempor at justo rebum rebum stet, justo
-                        elitr dolor amet sit</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="#!">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
-                </div>
+            <div class="spinner-grow text-success" role="status">
+                <span class="visually-hidden">Loading...</span>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div
-                    class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
-                        <i class="fa fa-2x fa-ambulance text-white"></i>
-                    </div>
-                    <h4 class="mb-3">Ambulance Service</h4>
-                    <p class="m-0">Kasd dolor no lorem nonumy sit labore tempor at justo rebum rebum stet, justo
-                        elitr dolor amet sit</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="#!">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
-                </div>
+            <div class="spinner-grow text-danger" role="status">
+                <span class="visually-hidden">Loading...</span>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="spinner-grow text-warning" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-info" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-light" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+            <div class="spinner-grow text-dark" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+
+
+            {% comment %}
+            <!-- <div class="col-lg-4 col-md-6">
                 <div
                     class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon mb-4">
@@ -91,7 +64,8 @@
                         <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
-            </div>
+            </div> -->
+            {% endcomment %}
         </div>
     </div>
 </div>
@@ -233,4 +207,5 @@
 </div>
 <!-- Testimonial End -->
 
+<script src="/static/js/service.js"></script>
 {% include 'includes/footer.html' %}
