--- a/templates/custom-admin/pricings.html
+++ b/templates/custom-admin/pricings.html
@@ -1,4 +1,5 @@
 {% include 'includes/header.html' %}
+{% load pricing_filter %}
 <div class="container mt-5">
 
     <div class="d-flex justify-content-between my-5">
@@ -14,6 +15,7 @@
                     <th scope="col">Offer Price</th>
                     <th scope="col">Normal Price</th>
                     <th scope="col">Is Published</th>
+                    <th scope="col">Features | Published</th>
                     <th scope="col">Priority</th>
                     <th scope="col">Actions</th>
                 </tr>
@@ -26,6 +28,7 @@
                     <td>{{i.offer_price}}</td>
                     <td>{{i.normal_price}}</td>
                     <td>{% if i.published %} Yes {% else %} No {% endif %}</td>
+                    <td>{{i.features.count}} | {{i|pub_count}}</td>
                     <td>{{i.priority}}</td>
                     <td>
                         <a class="btn btn-primary" href="{% url 'pricings-edit' i.pk %}">Edit</a>
