--- a/templates/custom-admin/pricings.html
+++ b/templates/custom-admin/pricings.html
@@ -3,7 +3,7 @@
 <div class="container mt-5">
 
     <div class="d-flex justify-content-between my-5">
-        <span>Our Pricings</span>
+        <span>Our Pricings - Page {{page_obj.number}} Of {{page_obj.paginator.num_pages}} pages </span>
         <a class="btn btn-primary" href="{% url 'pricings-create' %}">Create</a>
     </div>
     <div class="card p-2">
@@ -11,6 +11,7 @@
             <thead>
                 <tr>
                     <th scope="col">#</th>
+                    <th scope="col">Id</th>
                     <th scope="col">Name</th>
                     <th scope="col">Offer Price</th>
                     <th scope="col">Normal Price</th>
@@ -24,24 +25,54 @@
                 {% for i in object_list %}
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
+                    <th scope="row">{{i.id}}</th>
                     <td>{{i.name}}</td>
                     <td>{{i.offer_price}}</td>
                     <td>{{i.normal_price}}</td>
                     <td>{% if i.published %} Yes {% else %} No {% endif %}</td>
-                    <td>{{i.features.count}} | {{i|pub_count}}</td>
+                    <!-- {% comment %} <td>{{i.features.count}} | {{i|pub_count}}</td> {% endcomment %} -->
+
+                    <td>{{i.all_features_count}} | {{i.published_features_count}}</td>
                     <td>{{i.priority}}</td>
                     <td>
                         <a class="btn btn-primary" href="{% url 'pricings-edit' i.pk %}">Edit</a>
                         <a class="btn btn-primary" href="{% url 'pricings-delete' i.pk %}">Delete</a>
                     </td>
                 </tr>
+
                 {% empty %}
                 <tr>
-                    <td colspan="5">
+                    <td colspan="9">
                         <p><strong>Nothing added till now!</strong></p>
                     </td>
                 </tr>
                 {% endfor %}
+                <tr align="center">
+                    <td colspan="9">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                                <li class="page-item"><a class="page-link" {% if page_obj.has_previous %}
+                                        href="{% url 'pricings' %}?page={{page_obj.previous_page_number}}" 
+                                        {% endif %}>Previous</a></li>
+                                
+                                {% for i in page_obj.paginator.page_range %}
+                                <li class="page-item {% if page_obj.number == i %} active {% endif %}"><a 
+                                        class="page-link" 
+                                    {% if page_obj.number == i %}
+                                    {% else %}
+                                        href="{% url 'pricings' %}?page={{i}}"
+                                    {% endif %}>
+                                    {{i}}
+                                    </a>
+                                 </li>
+                                {% endfor %}
+                                <li class="page-item"><a class="page-link" {% if page_obj.has_next %}
+                                        href="{% url 'pricings' %}?page={{page_obj.next_page_number}}" 
+                                        {% endif %}>Next</a></li>
+                            </ul>
+                        </nav>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
